Setting up best buy service with a searches controller and index view

--- a/spec/fixtures/items.yml
+++ b/spec/fixtures/items.yml
@@ -13,14 +13,14 @@ item_2:
   updated_at: "2016-03-08T07:27:24.708Z"
 
 item_3:
-  name: "Ergonomic Wooden Chair"
+  name: "Ergonomic Wooden Chair sennheiser"
   description: "Aut in ea qui. Ut enim libero rerum facilis pariatur. In temporibus enim maxime expedita nulla voluptatibus. Quaerat magni nam et harum voluptatum labore. Accusamus consequuntur sed."
   image_url: "http://robohash.org/2.png?set=set2&bgset=bg1&size=200x200"
   created_at: "2016-03-08T07:27:24.710Z"
   updated_at: "2016-03-08T07:27:24.710Z"
 
 item_4:
-  name: "Rustic Copper Knife"
+  name: "Rustic Copper Knife sennheiser"
   description: "Earum in error deserunt pariatur. Hic eveniet velit. Excepturi nihil labore molestiae veniam neque et. Qui vero necessitatibus atque consequatur odit. Sunt autem iure et deserunt provident."
   image_url: "http://robohash.org/3.png?set=set2&bgset=bg1&size=200x200"
   created_at: "2016-03-08T07:27:24.712Z"
